# MINTmap

./: .flake8  Makefile  README.md  README.txt  pyproject.toml
ExampleRun/: output-MINTmap_v3-ambiguous-tRFs.countsmeta.txt  output-MINTmap_v3-ambiguous-tRFs.expression.html  output-MINTmap_v3-ambiguous-tRFs.expression.txt  output-MINTmap_v3-exclusive-tRFs.countsmeta.txt  output-MINTmap_v3-exclusive-tRFs.expression.html  output-MINTmap_v3-exclusive-tRFs.expression.txt
config/hooks/: pre-commit
spec/common/: readers_spec.py
spec/mintmap/: annotations_spec.py  app_spec.py  pipeline_spec.py  sequence_spec.py
src/mintmap/: __init__.py  annotations.py  app.py  pipeline.py  sequence.py
src/mintmap/common/: helpers.py  mintplates.py  readers.py
src/mintmap/templates/: countsmeta.txt.j2
